# swara

./: .env.example  .gitignore  Cargo.toml  package.json  turbo.json
.cargo/: config.toml
apps/web/: package.json  tsconfig.json  vite.config.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: config.ts  livekit.ts  mediaSession.ts
apps/web/src/lib/api/: client.ts
apps/web/src/lib/components/: BottomNav.svelte  ChannelCard.svelte  CoverageMap.svelte  FrequencyDisplay.svelte  NowPlaying.svelte  Waveform.svelte
apps/web/src/lib/stores/: channel.ts  location.ts  user.ts
apps/web/src/lib/utils/: format.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/broadcast/: +page.svelte
apps/web/src/routes/nearby/: +page.svelte
apps/web/src/routes/settings/: +page.svelte
apps/web/static/: manifest.webmanifest
docs/: concept-ui-v1.md  local-api-setup.md
docs/mockups/: swara-v1-mockup.html
scripts/: run-api-local.sh  setup-local-macos.sh  start-livekit-dev.sh  start-local-stack.sh  status-local-stack.sh  stop-local-stack.sh
services/api/: Cargo.toml  run_migrations.sh
services/api/migrations/: 001_enable_extensions.sql  002_create_users.sql  003_create_channels.sql  004_create_schedules.sql  005_seed_dev.sql  006_remove_dev_seed_data.sql
services/api/scripts/: verify_schema.sql
services/api/src/: auth.rs  config.rs  dead_air.rs  docs.rs  error.rs  main.rs  package.json
services/api/src/db/: channels.rs  mod.rs  schedules.rs  users.rs
services/api/src/livekit/: mod.rs
services/api/src/middleware/: auth.rs
services/api/src/models/: mod.rs
services/api/src/redis/: mod.rs
services/api/src/routes/: auth.rs  broadcast.rs  channels.rs  listen.rs  mod.rs  schedule.rs
